fix longtxt, add overflow

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -104,3 +104,8 @@ FORM {
 .white {
 	color: #FFF;
 }
+
+.longtxt{
+  height: 525px;
+  overflow: scroll;
+}
